--- a/src/components/NamesBox/NamesBox.css
+++ b/src/components/NamesBox/NamesBox.css
@@ -2,18 +2,17 @@
 {
     text-align: center;
     display: inline-block;
-    /* background-color: white; */
-    width:700px;
-    max-height: 300px;
+    width:850px;
+    max-height: 78%;
     overflow-y: scroll;
 }
+
 *{
     scrollbar-width: thin;          /* "auto" or "thin" */
     scrollbar-color: rgb(77, 77, 247) rgba(0,0,0,0);   /* scroll thumb and track */
-
 }
 *::-webkit-scrollbar {
-    width: 12px;
+    width: 5px;
   }
   
   *::-webkit-scrollbar-track {
@@ -21,9 +20,12 @@
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color: rgb(77, 77, 247);
+    /* background-color: rgb(77, 77, 247); */
+    /* background-color: #282d4f; */
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 20px;
-    border: 3px solid rgb(209, 208, 208);
+    /* border: 3px solid rgb(209, 208, 208); */
+    border: none;
   }
 
 
