--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -10,10 +10,11 @@
 {
     border-radius: 50px;
     border: none;
-    padding: 10px;
+    padding: 10px 15px 10px 15px;
     margin: 10px;
-    width:250px;
+    width:270px;
     background-color: rgb(183, 147, 253);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
     color: white;
 }
 
